--- a/back/public/css/styles.css
+++ b/back/public/css/styles.css
@@ -88,3 +88,45 @@ input[type="checkbox"]{
 .img-input-container input, .feature-input-container input{
     width: 100%!important;
 }
+
+.img-input-container div img{
+    width: 50%;
+}
+
+.portrait_img{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.portrait_img img{
+    width: 50%;
+    margin-bottom:15px
+}
+
+.feature{
+    border: rgb(73, 177, 177) 2px solid;
+}
+
+.all-container{
+    display: flex;
+    justify-content: center;
+}
+
+.property-container{
+    background-color: whitesmoke;
+    border: 2px solid  rgb(73, 177, 177);
+    border-radius: 5px;
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.property-container img{
+    width: 90%;
+    border: 1px solid black;
+}
+
