--- a/back/src/views/login.ejs
+++ b/back/src/views/login.ejs
@@ -4,12 +4,15 @@
 <body>
     <%- include('./partials/header') %>
     <div class="form-container">
-        <form action="">
+        <form action="/login" method="POST">
             <label for="email">Email</label>
-            <input type="email" name="email">
+            <input type="email" name="mail">
             <label for="password">Password</label>
             <input type="password" name="password">
             <button type="submit">Login</button>
+            <% if(loginMsg) {%> 
+                <small><%= loginMsg %></small>
+            <% } %> 
         </form>
     </div>
 </body>
