--- a/back/src/views/partials/header.ejs
+++ b/back/src/views/partials/header.ejs
@@ -1,7 +1,12 @@
 <nav class="header">
     <ul>
-        <li> <a href="/"> Login </a> </li>
-        <li> <a href="/create"> Create </a> </li>
-        <li> <a href="/edit"> Edit </a> </li>
+        <% if(typeof(userLogged) != 'undefined') {%> 
+            <li> <a href="/all"> Home </a> </li>
+            <li> <a href="/create"> Create </a> </li>
+            <li> <a href="/edit"> Edit </a> </li>
+            <li> <a href="/logout"> Logout </a> </li>
+        <% } else {%> 
+            <li> <a href="/"> Login </a> </li>
+        <% } %> 
     </ul>
 </nav>
