--- a/front/src/components/Contact/Contact.css
+++ b/front/src/components/Contact/Contact.css
@@ -18,6 +18,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     background-color: rgba(217, 217, 217, 0.5);
     padding-top: 50px;
 }
