style and related fix

--- a/front/src/components/Categories/Categories.css
+++ b/front/src/components/Categories/Categories.css
@@ -236,6 +236,9 @@ BUYERS AGENT
     .rental-title-container{
         width: 50%;
     }
+    .property-container{
+        flex-direction: column;
+    }
 }
 
 @media(max-width:480px){
