--- a/front/src/components/Home/Slider/Slider.css
+++ b/front/src/components/Home/Slider/Slider.css
@@ -1,18 +1,31 @@
 .carousel-caption{
-    right: 0px;
-    bottom: 0px;
-    left: 0px;
+    width: 100%!important;
+    right: 0px!important;
+    bottom: 0px!important;
+    left: 0px!important;
     padding-left: 50px;
     padding-top: 15px;
     padding-bottom: 15px;
-    text-align: left;
     text-transform: uppercase;
     letter-spacing: 0.5rem;
     background-color: rgba(0, 0, 0, 0.5);
 }
 
-.carousel-caption p{
+.carousel-caption h3{
     color: white;
+    width: 100%;
+    text-align: left!important;
+}
+
+.carousel{
+    height: 90vh;
+    width: 100%;
+    overflow: hidden;
+}
+
+.carousel img{
+    height: 90vh;
+    width: 100vw;
 }
 
 @media(max-width:480px){
@@ -22,21 +35,20 @@
         padding-bottom:5px ;
     }
 
-    /* .carousel-inner{
-        height: 80vh;
-        width: auto;
-    } 
+    .carousel{
+        width: 100vw;
+        height: 35vh;
+    }
 
-    .carousel-item, .carousel-item img{
-        height: 100%;
-        width: auto;
-        overflow: hidden;
-    } */
+    .carousel img{
+        width: 100%;
+        height: 35vh;
+    }
 }
 
 @media(max-width:400px){
-    .carousel-caption p{
-        font-size: 0.4rem;
+    .carousel-caption h3{
+        font-size: 0.6rem;
         color: white;
     }
 }
